<resources>
    <string name="app_name">DhanRasee</string>

    <!--Text on login-->

    <string name="skip_btn">Skip</string>
    <string name="login_text">LOGIN</string>
    <string name="username_text">USERNAME</string>
    <string name="password_text">PASSWORD</string>
    <string name="login_btn">Login</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="forgot_login">Forgot Login ID?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="customer_care">Need Help?</string>
    <string name="customer_care_number">8963006300</string>

    <!--Loan items-->
    <string name="select_loan">Select Loan Category</string>
    <string name="loan_amount">Select Loan Amount</string>
    <string name="personal_loan">Personal Loan(for salaried)</string>
    <string name="business_loan">Business Loan(for self-employed)</string>
    <string name="daily_loan">Daily Loan(only for shopkeepers)</string>
    <string name="home">Home Loan</string>
    <string name="new_purchase">New Purchase</string>
    <string name="construction">Construction</string>
    <string name="mortgage">Mortgage</string>
    <string name="vehicle_loan">Vehicle Loan</string>
    <string name="two_wheeler">2 Wheeler New</string>
    <string name="four_wheeler">4 Wheeler New</string>
    <string name="commercial_new">Commercial New</string>
    <string name="two_wheeler_ref">2 Wheeler New Refinance</string>
    <string name="four_wheeler_ref">4 Wheeler New Refinance</string>
    <string name="commercial_new_ref">Commercial New Refinance</string>
    <string name="gold_loan">Gold Loan</string>


    <!--Personal detail hints -->
    <string name="personal_detail">Personal Details</string>
    <string name="father_name">Father Name</string>
    <string name="mother_name">Mother Name</string>
    <string name="name">Your Name</string>
    <string name="address">Address</string>
    <string name="dob">Date Of Birth</string>
    <string name="contact_no">Contact Number</string>
    <string name="email_id">Email ID</string>
    <string name="marital_status">Marital Status</string>
    <string name="married">Married</string>
    <string name="unmarried">Unmarried</string>
    <string name="divorce">Other</string>
    <string name="spouse_name">Spouse Name(if married)</string>
    <string name="dob_marriage">Date Of Marriage(if married)</string>
    <string name="type_of_residence">Type of Residence</string>
    <string name="owned">Owned/Self</string>
    <string name="ancestral">Ancestral/Parental</string>
    <string name="rented">Rented</string>
    <string name="no_of_years">Number of Years at Same Address</string>
    <string name="occupation">Occupation</string>
    <string name="salaried">Salaried</string>
    <string name="business">Business</string>
    <string name="others">Others</string>

    <!--official details hint-->
    <string name="official_details">Official Detail\'s</string>
    <string name="name_of_firm">Name of Firm</string>
    <string name="name_of_department">Name of Department</string>
    <string name="designation">Designation</string>
    <string name="date_of_establishment">Date of Establishment</string>
    <string name="date_of_joining">Date of Joining</string>
    <string name="official_contact">Official Contact Number</string>
    <string name="official_mail_id">Official Email ID</string>

    <!--Image Uploads-->
    <string name="image_upload">Upload Documents</string>
    <string name="proof_of_identity">Proof Of Identity</string>
    <string name="aadhar_front">Aadhar(FRONT)</string>
    <string name="pan">PAN Card</string>
    <string name="driving_license">Driving License</string>
    <string name="voter_id_card">Voter ID Card</string>
    <string name="aadhar_back">Aadhar(BACK)</string>
    <string name="electricity_bill">Electricity Bill(Owned or Ancestral)</string>
    <string name="gas_bill">Gas Bill(Owned or Ancestral)</string>
    <string name="ration_card">Ration Card(By Self Name)</string>
    <string name="proof_of_income">Proof Of Income</string>
    <string name="three_itr">3 Years of ITR</string>
    <string name="three_salary">3 Months of Salary Slips</string>
    <string name="additional_attachments">Additional Attachments</string>
    <string name="one_banking">1 Year Banking</string>
    <string name="firm_registration">Firm Registration</string>
    <string name="vehicle_rc">Vehicle RC</string>
    <string name="property_papers">Property Papers</string>
    <string name="gdd_jewelery">Gold Jewelery</string>
    <string name="vehicle_noc">Vehicle NOC</string>
    <string name="proof_of_address">Proof of Address</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <!--Next-->
    <string name="next_button_text">Next</string>
</resources>
