<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ImageUploadFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_check_image"/>

        <TextView
            android:id="@+id/identity_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/proof_of_identity"
            android:textColor="@color/black"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/front_aadhar_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/custom_button_background"
            android:text="@string/aadhar_front"
            android:textColor="@color/black"
            android:textSize="@dimen/average_text_size"
            app:layout_constraintTop_toBottomOf="@id/identity_text" />

        <Button
            android:id="@+id/pan_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/custom_button_background"
            android:text="@string/pan"
            android:textColor="@color/black"
            android:textSize="@dimen/average_text_size"
            app:layout_constraintTop_toBottomOf="@id/front_aadhar_button" />

        <Button
            android:id="@+id/license_button_identity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/custom_button_background"
            android:text="@string/driving_license"
            android:textColor="@color/black"
            android:textSize="@dimen/average_text_size"
            app:layout_constraintTop_toBottomOf="@id/pan_button" />

        <Button
            android:id="@+id/voter_id_button_identity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/custom_button_background"
            android:text="@string/voter_id_card"
            android:textColor="@color/black"
            android:textSize="@dimen/average_text_size"
            app:layout_constraintTop_toBottomOf="@id/license_button_identity" />

        <TextView
            android:id="@+id/proof_of_address_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/proof_of_address"
            android:textColor="@color/black"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/voter_id_button_identity" />

        <Button
            android:id="@+id/back_aadhar_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/custom_button_background"
            android:text="@string/aadhar_back"
            android:textColor="@color/black"
            android:textSize="@dimen/average_text_size"
            app:layout_constraintTop_toBottomOf="@id/proof_of_address_text" />

        <Button
            android:id="@+id/driving_license_button_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/custom_button_background"
            android:text="@string/driving_license"
            android:textColor="@color/black"
            android:textSize="@dimen/average_text_size"
            app:layout_constraintTop_toBottomOf="@id/back_aadhar_button" />

        <Button
            android:id="@+id/voter_id_button_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/custom_button_background"
            android:text="@string/voter_id_card"
            android:textColor="@color/black"
            android:textSize="@dimen/average_text_size"
            app:layout_constraintTop_toBottomOf="@id/driving_license_button_address" />

        <Button
            android:id="@+id/electricity_bill_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/custom_button_background"
            android:text="@string/electricity_bill"
            android:textColor="@color/black"
            android:textSize="@dimen/average_text_size"
            app:layout_constraintTop_toBottomOf="@id/voter_id_button_address" />

        <Button
            android:id="@+id/gas_bill_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/custom_button_background"
            android:text="@string/gas_bill"
            android:textColor="@color/black"
            android:textSize="@dimen/average_text_size"
            app:layout_constraintTop_toBottomOf="@id/electricity_bill_button" />

        <Button
            android:id="@+id/ration_card_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/custom_button_background"
            android:text="@string/ration_card"
            android:textColor="@color/black"
            android:textSize="@dimen/average_text_size"
            app:layout_constraintTop_toBottomOf="@id/gas_bill_button" />

        <TextView
            android:id="@+id/proof_of_income"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/proof_of_income"
            android:textColor="@color/black"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ration_card_button" />


        <Button
            android:id="@+id/itr_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/custom_button_background"
            android:text="@string/three_itr"
            android:textColor="@color/black"
            android:textSize="@dimen/average_text_size"
            app:layout_constraintTop_toBottomOf="@id/proof_of_income" />

        <Button
            android:id="@+id/salary_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/custom_button_background"
            android:text="@string/three_salary"
            android:textColor="@color/black"
            android:textSize="@dimen/average_text_size"
            app:layout_constraintTop_toBottomOf="@id/itr_button" />


        <TextView
            android:id="@+id/additional_attachment_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/additional_attachments"
            android:textColor="@color/black"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/salary_button" />


        <Button
            android:id="@+id/one_banking_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/custom_button_background"
            android:text="@string/one_banking"
            android:textColor="@color/black"
            android:textSize="@dimen/average_text_size"
            app:layout_constraintTop_toBottomOf="@id/additional_attachment_text" />

        <Button
            android:id="@+id/firm_registration_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/custom_button_background"
            android:text="@string/firm_registration"
            android:textColor="@color/black"
            android:textSize="@dimen/average_text_size"
            app:layout_constraintTop_toBottomOf="@id/one_banking_button" />

        <Button
            android:id="@+id/vehicle_rc_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/custom_button_background"
            android:text="@string/vehicle_rc"
            android:textColor="@color/black"
            android:textSize="@dimen/average_text_size"
            app:layout_constraintTop_toBottomOf="@id/firm_registration_button" />


        <Button
            android:id="@+id/property_papers_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/custom_button_background"
            android:text="@string/property_papers"
            android:textColor="@color/black"
            android:textSize="@dimen/average_text_size"
            app:layout_constraintTop_toBottomOf="@id/vehicle_rc_button" />


        <Button
            android:id="@+id/gdd_jewelery_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/custom_button_background"
            android:text="@string/gdd_jewelery"
            android:textColor="@color/black"
            android:textSize="@dimen/average_text_size"
            app:layout_constraintTop_toBottomOf="@id/property_papers_button" />


        <Button
            android:id="@+id/vehicle_noc_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/custom_button_background"
            android:text="@string/vehicle_noc"
            android:textColor="@color/black"
            android:textSize="@dimen/average_text_size"
            app:layout_constraintTop_toBottomOf="@id/gdd_jewelery_button" />


        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/custom_button_background"
            android:text="@string/next_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vehicle_noc_button" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>