<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".OfficialDetailFragment"
    android:layout_marginHorizontal="@dimen/medium_margin">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_firm_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_firm"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLines="1"
            app:layout_constraintHeight_percent="0.1" />

        <EditText
            android:id="@+id/et_name_of_department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_department"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLines="1"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintTop_toBottomOf="@id/et_firm_name" />

        <EditText
            android:id="@+id/et_designation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/designation"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLines="1"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintTop_toBottomOf="@id/et_name_of_department" />


        <EditText
            android:id="@+id/et_dob_establishment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_establishment"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:maxLines="1"
            android:maxLength="10"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintTop_toBottomOf="@id/et_designation" />


        <EditText
            android:id="@+id/et_date_of_joining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_joining"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:maxLines="1"
            android:maxLength="10"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintTop_toBottomOf="@id/et_dob_establishment" />

        <EditText
            android:id="@+id/et_official_contact_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/official_contact"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:maxLength="10"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintTop_toBottomOf="@id/et_date_of_joining" />


        <EditText
            android:id="@+id/et_official_mail_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/official_mail_id"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintTop_toBottomOf="@id/et_official_contact_no" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_background"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/next_button_text"
            android:textColor="@color/white"
            android:paddingHorizontal="@dimen/small_margin"
            app:layout_constraintTop_toBottomOf="@id/et_official_mail_id"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="@dimen/large_margin"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>


</FrameLayout>