<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"/>

    <Button
        android:id="@+id/customer_care_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_care"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ic_call_black_24dp"
        android:layout_margin="@dimen/medium_margin"
        android:paddingVertical="@dimen/small_margin"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    
    <TextView
        android:gravity="center_vertical"
        android:padding="10dp"
        android:id="@+id/login_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/login_text"
        app:layout_constraintTop_toBottomOf="@id/customer_care_number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHeight_percent="0.15"
        android:textColor="@color/black"
        android:textSize="@dimen/very_extra_large_text_size"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_input"
        app:layout_constraintTop_toBottomOf="@id/login_text"
        android:paddingHorizontal="@dimen/medium_padding"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.09">

        <EditText
            android:id="@+id/username_text"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:hint="@string/username_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_input"
        app:layout_constraintTop_toBottomOf="@id/username_input"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingHorizontal="@dimen/medium_padding"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.09"
        >
        <EditText
            android:id="@+id/password_text"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:hint="@string/password_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </android.support.design.widget.TextInputLayout>

  <android.support.constraint.ConstraintLayout
      app:layout_constraintTop_toBottomOf="@id/password_input"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:padding="@dimen/large_margin"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintHeight_percent="0.4">

      <Button
          android:id="@+id/login_button"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toTopOf="@id/sign_up_button"
          android:background="@drawable/custom_button_background"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/login_btn"
          android:textSize="@dimen/medium_text_size"
          android:textColor="@color/black"
          />

      <Button
          android:id="@+id/sign_up_button"
          app:layout_constraintTop_toBottomOf="@id/login_button"
          android:background="@drawable/custom_button_background"
          android:layout_width="match_parent"
          android:layout_marginTop="@dimen/medium_margin"
          android:layout_height="wrap_content"
          android:text="@string/sign_up_btn"
          android:textColor="@color/black"
          android:textSize="@dimen/medium_text_size"
          />

      <TextView
          android:padding="@dimen/medium_padding"
          android:id="@+id/forgot_id_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/forgot_login"
          app:layout_constraintTop_toBottomOf="@id/sign_up_button"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingHorizontal="@dimen/medium_padding"
          android:text="@string/forgot_password"
          app:layout_constraintTop_toBottomOf="@id/forgot_id_text"/>

  </android.support.constraint.ConstraintLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Share"
        android:drawableStart="@drawable/ic_share_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:drawableLeft="@drawable/ic_share_black_24dp"
        tools:ignore="RtlCompat" />

</android.support.constraint.ConstraintLayout>